--- a/roles_policies.yml
+++ b/roles_policies.yml
@@ -4,11 +4,14 @@ Parameters:
   domainName:
     Description: Domain Name
     Type: String
-    Default: khismatrao.me
+    Default: prod.khismatrao.me
   cloudWatchAgentPolicyArn:
     Description: CloudWatchAgentServerPolicy ARN
     Type: String
     Default: arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
+  # AppStackName:
+  #   Description: GitHub Roles and Policies Stack Name
+  #   Type: String
 Resources:
   githubEc2AmiPolicyId:
     Type: AWS::IAM::ManagedPolicy
@@ -71,20 +74,20 @@ Resources:
           - Fn::Sub: arn:aws:s3:::codedeploy.${domainName}/*
           - arn:aws:s3:::aws-codedeploy-us-east-1/*
   
-  # codeDeployLambdaUpdateFunctionCodePolicyId:
-  #   Type: AWS::IAM::ManagedPolicy
-  #   Properties:
-  #     ManagedPolicyName: CodeDeploy-Lambda-UpdateFunctionCode
-  #     PolicyDocument:
-  #       Version: '2012-10-17'
-  #       Statement:
-  #       - Action:
-  #         - lambda:UpdateFunctionCode
-  #         Effect: Allow
-  #         Resource:
-  #           Fn::Sub: arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:*
-  #     Users:
-  #     - ghactions-app
+  codeDeployLambdaUpdateFunctionCodePolicyId:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      ManagedPolicyName: CodeDeploy-Lambda-UpdateFunctionCode
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Action:
+          - lambda:UpdateFunctionCode
+          Effect: Allow
+          Resource:
+            Fn::Sub: arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:*
+      Users:
+      - ghactions-app
   
   githubS3UploadPolicyId:
     Type: AWS::IAM::ManagedPolicy
@@ -154,6 +157,290 @@ Resources:
           - Fn::Sub: arn:aws:codedeploy:${AWS::Region}:${AWS::AccountId}:deploymentconfig:CodeDeployDefault.AllAtOnce
       Users:
       - ghactions-app
+
+  dynamoDB:
+    Type: AWS::DynamoDB::Table
+    Properties:
+       TableName: "Account"
+       ProvisionedThroughput: 
+          ReadCapacityUnits: "5"
+          WriteCapacityUnits: "5"
+       AttributeDefinitions: 
+         - 
+           AttributeName: "username"
+           AttributeType: "S"
+         - 
+           AttributeName: "token"
+           AttributeType: "S"           
+       TimeToLiveSpecification:
+           AttributeName: "TimeToLive"
+           Enabled: TRUE
+       KeySchema: 
+         - 
+           AttributeName: "username"
+           KeyType: "HASH" 
+         - 
+           AttributeName: "token"
+           KeyType: "RANGE"
+       Tags:
+        - Key: Name
+          Value:
+            Fn::Sub: "${AWS::StackName}-dynamoDBTable"
+
+  # LambdaPolicy:
+  #   Type: AWS::IAM::Policy
+  #   Properties:
+  #     PolicyName: CodeDeploy-EC2-S3
+  #     PolicyDocument:
+  #       Version: 2012-10-17
+  #       Statement:
+  #         -
+  #           Effect: Allow
+  #           Action:
+  #             - logs:CreateLogGroup
+  #           Resource:
+  #             - arn:aws:logs:us-east-1:820852419355:*
+  #         -
+  #           Effect: Allow
+  #           Action:
+  #             - logs:CreateLogStream
+  #             - logs:PutLogEvents
+  #           Resource:
+  #             - arn:aws:logs:us-east-1:820852419355:log-group:/aws/lambda/csye6225-spring2022:*
+  #         -
+  #           Effect: Allow
+  #           Action:
+  #             - sns:Subscribe
+  #             - sns:Receive
+  #             - sns:Unsubscribe
+  #           Resource: !Ref SNSTopic
+  #         -
+  #           Effect: Allow
+  #           Action:
+  #             - dynamodb:PutItem
+  #           Resource:
+  #             - arn:aws:dynamodb:us-east-1:820852419355:table/Account
+  #         -
+  #           Effect: Allow
+  #           Action:
+  #             - ses:SendEmail
+  #             - ses:SendRawEmail
+  #           Resource:
+  #             - arn:aws:ses:us-east-1:030616714081:identity/*
+  #     Roles:
+  #       -
+  #         !Ref LambdaRole
+
+  # LambdaRole:
+  #   Type: AWS::IAM::Role
+  #   Properties:
+  #     RoleName: LambdaRole
+  #     AssumeRolePolicyDocument:
+  #       Version: 2012-10-17
+  #       Statement:
+  #         -
+  #           Effect: Allow
+  #           Principal:
+  #             Service:
+  #               - lambda.amazonaws.com
+  #           Action:
+  #             - sts:AssumeRole
+  #     Path: /        
+     
+  # LambdaFunction:
+  #   Type: AWS::Lambda::Function
+  #   Properties:
+  #     Code:
+  #         S3Bucket: "codedeploy.sandeepwagh.me"
+  #         S3Key: "SNS.zip"
+  #     Handler: "index.handler"
+  #     Runtime: "nodejs14.x"
+  #     FunctionName: "csye6225-spring2022"
+  #     Role: !GetAtt LambdaRole.Arn
+      
+  # SNSTopic:
+  #   Type: AWS::SNS::Topic
+  #   Properties:
+  #     TopicName: "csye6225-myTopic"
+  #     FifoTopic: false
+  #     Subscription:  
+  #       - 
+  #         Endpoint: !GetAtt LambdaFunction.Arn
+  #         Protocol: "lambda"
+            
+  # DDBTable:
+  #   Type: AWS::DynamoDB::Table
+  #   Properties:
+  #     TableName: "Account"
+  #     ProvisionedThroughput: 
+  #         ReadCapacityUnits: "5"
+  #         WriteCapacityUnits: "5"
+  #     AttributeDefinitions: 
+  #       - 
+  #         AttributeName: "username"
+  #         AttributeType: "S"
+  #       - 
+  #         AttributeName: "token"
+  #         AttributeType: "S"           
+  #     TimeToLiveSpecification:
+  #         AttributeName: "TimeToLive"
+  #         Enabled: TRUE
+  #     KeySchema: 
+  #       - 
+  #         AttributeName: "username"
+  #         KeyType: "HASH" 
+  #       - 
+  #         AttributeName: "token"
+  #         KeyType: "RANGE" 
+
+  lambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service: lambda.amazonaws.com
+          Action: sts:AssumeRole
+      Path: "/"
+      RoleName: LambdaExecutionRole
+      ManagedPolicyArns:
+      - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      # - Ref: lambdaPolicy
+      Tags:
+      - Key: Name
+        Value:
+          Fn::Sub: "${AWS::StackName}-lambdaExecutionRole"
+  
+  lambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: csye6225
+      Code:
+        S3Bucket:
+          Fn::Sub: codedeploy.${domainName}
+        S3Key: SNS.zip
+      Handler: index.handler #class.methodName
+      Environment:
+        Variables:
+          domain:
+            Ref: domainName
+          table:
+            Ref: dynamoDB
+            # Fn::ImportValue:
+            #   Fn::Sub: "${AppStackName}-dynamoDBTable"
+      Role:
+        Fn::GetAtt:
+        - lambdaExecutionRole
+        - Arn
+      Runtime: nodejs14.x #java11
+      MemorySize: 128 #128
+      Timeout: 180
+      # ReservedConcurrentExecutions: 5
+      Tags:
+      - Key: Name
+        Value:
+          Fn::Sub: "${AWS::StackName}-Email"
+      - Key: Application Role
+        Value: Email Lambda
+  
+  topic:
+    Type: AWS::SNS::Topic
+    DependsOn: lambdaFunction
+    Properties:
+      Subscription:
+      - Endpoint:
+          Fn::GetAtt:
+          - lambdaFunction
+          - Arn
+        Protocol: lambda
+      TopicName: email
+  
+  lambdaPermission:
+    Type: AWS::Lambda::Permission
+    DependsOn: lambdaFunction
+    Properties:
+      FunctionName:
+        Ref: lambdaFunction
+      Action: lambda:InvokeFunction
+      Principal: sns.amazonaws.com
+      SourceArn:
+        Ref: topic
+  
+  lambdaPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    DependsOn: topic
+    Properties:
+      ManagedPolicyName: lambdaPolicy
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Sid: LambdaDynamoDBAccess
+          Effect: Allow
+          Action:
+          - dynamodb:GetItem
+          - dynamodb:PutItem
+          - dynamodb:UpdateItem
+          Resource:
+            - arn:aws:dynamodb:us-east-1:820852419355:table/Account
+            # Fn::ImportValue:
+            #   Fn::Sub: "${AppStackName}-dynamoDBArn"
+        - Sid: Logs
+          Effect: Allow
+          Action:
+          - logs:CreateLogGroup
+          Resource:
+            - arn:aws:ses:us-east-1:820852419355:identity/*
+        
+        - Sid: LogCreation
+          Effect: Allow
+          Action:
+          - logs:CreateLogStream
+          - logs:PutLogStream
+          Resource:
+            - arn:aws:logs:us-east-1:820852419355:log-group:/aws/lambda/csye6225-spring2022:*
+
+        - Sid: LambdaSESAccess
+          Effect: Allow
+          Action:
+          - ses:VerifyEmailAddress
+          - ses:SendEmail
+          - ses:SendRawEmail
+          Resource:
+            - arn:aws:ses:us-east-1:820852419355:identity/*
+        - Sid: LambdaS3Access
+          Effect: Allow
+          Action:
+          - s3:GetObject
+          Resource:
+            - arn:aws:s3:::codedeploy.${domainName}/*
+        - Sid: LambdaSNSAccess
+          Effect: Allow
+          Action:
+          - sns:ConfirmSubscription
+          Resource: !Ref topic
+      Roles:
+      - Ref: lambdaExecutionRole
+  
+  topicPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    DependsOn: topic
+    Properties:
+      ManagedPolicyName: EC2TopicAccessPolicy
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Sid: AllowEC2ToPublishToSNSTopic
+          Effect: Allow
+          Action:
+          - sns:Publish
+          - sns:CreateTopic
+          Resource:
+            Ref: topic
+      Roles:
+      - Ref: ec2ExecutionRoleId
+      # - Fn::ImportValue:
+      #     Fn::Sub: "${AWS::StackName}-ec2ExecutionRoleId"
 
 Outputs:
   ec2ExecutionRoleId:
